# report_system

./: .gitignore  README.md  pyproject.toml  requirements.txt  seed.py
app/: auth.py  crud.py  database.py  main.py
app/models/: __init__.py
app/routers/: __init__.py  analytics.py  auth.py  issues.py  projects.py  reports.py  teams.py  users.py
app/schemas/: __init__.py
app/services/: analytics.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_issues.py  test_projects.py  test_reports.py  test_teams.py  test_users.py
